gcc/testsuite/rust/compile/issue-4161.rs

type X = ();

fn main() {
    let () = ::X = (); // { dg-error "expected value, found invalid expression" }
}